--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div class="d-flex div3">
 
-                <input type="text" placeholder="Search City... id="input" class="form-control mt-3 mb- 3
+                <input type="text" placeholder="Search City..." id="input" class="form-control mt-3 mb- 3
                 input">
 
                 <button onclick="searchData()"  class=" bttn  pt-2 pb-2 mt-4 ms-4">Search</button>
